--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout ${{ github.ref }}
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
       
       - name: With Node.js '16.x' selected
         uses: actions/setup-node@master
